workshop03/resources/app/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggapp-deploy
  namespace: bggns
  labels:
    app: bggapp
    name: bggapp-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bggapp
      name: bggapp-po
  template:
    metadata:
      name: bggapp-po
      labels:
        app: bggapp
        name: bggapp-po
    spec:
      containers:
      - name: bggapp-container
        image: chukmunnlee/bgg-app:nov-2025
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "96Mi"
            cpu: "64m"
        ports:
        - containerPort: 5000
