workshop03/resources/app/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bggapp-svc
  namespace: bggns
  labels:
    app: bggapp
    name: bggapp-svc
spec:
  type: ClusterIP
  selector:
    app: bggapp
    name: bggapp-po
  ports:
  - name: bggapp-svc-port
    port: 5000
    targetPort: bggapp-port
